# CxFW

./: .gitignore  CMakeLists.txt  CxFW.toml  README.md  commit.template
PIMS/: CMakeLists.txt
PIMS/AppHub/: CMakeLists.txt  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  res.qrc
PIMS/CxFw/: CMakeLists.txt
PIMS/CxFw/CxApp/: CMakeLists.txt  cxapp.cpp  cxapp.h
PIMS/CxFw/CxBinding/: CMakeLists.txt  cxbinding.cpp  cxbinding.h
PIMS/CxFw/CxCore/: CMakeLists.txt  cxlistmodel.cpp  cxlistmodel.h
PIMS/CxFw/CxLogin/: CxLogin.qml
PIMS/CxFw/CxNetwork/: cxnetwork.cpp  cxnetwork.h
PIMS/CxFw/CxQuick/: BoxTheme.qml  CMakeLists.txt  LinkItem.qml  ListViewLighlighter.qml  OneColumnTreeView.qml  cxqmlsettings.cpp  cxqmlsettings.h  cxquickplugin.cpp  plugins.qmltypes  qmldir  theme.h
PIMS/CxFw/CxQuick/ColorSheet/: qmldir
PIMS/CxFw/CxQuick/Controls/: CMakeLists.txt  Popup.qml
PIMS/CxFw/CxQuick/CxFw/: Button.qml  CMakeLists.txt  Menu.qml  qmldir
PIMS/CxFw/CxQuick/Types/: CMakeLists.txt  CxQuick.js  qmldir
PIMS/CxFw/CxQuickControls/: Badge.qml  CMakeLists.txt  HomePage.qml  qml.qrc
PIMS/CxFw/CxQuickControls/ColorSheet/: CMakeLists.txt
PIMS/CxFw/CxQuickControls/Controls/: Banner.qml  CMakeLists.txt  Popup.qml  StatusBar.qml  qmldir
PIMS/CxFw/CxQuickControls/CxFw/: Button.qml  CMakeLists.txt  ComboBox.qml  ToolSeparator.qml  qmldir
PIMS/CxFw/CxQuickControls/Qml/: LinkItem.qml  Mask.qml  TextField.qml
PIMS/CxFw/CxQuickControls/Quick/: Mask.qml  OneColumnTreeView.qml
PIMS/CxFw/MarkdownSyntaxHighlighter/: CMakeLists.txt
PIMS/CxFw/QGlobalShortcut/: CMakeLists.txt  qglobalshortcut.cc
PIMS/Fragment/: CMakeLists.txt  logo.rc  main.cpp  main.qml  res.qrc
PIMS/Fragment/qml/: Config.js  SettingsPage.qml
PIMS/QuickRichText/: CMakeLists.txt  main.cpp  main.qml  syntaxdefinitions.h  syntaxhighlighter.cpp  syntaxhighlighter.h
PIMS/Todos/: CMakeLists.txt  logo.rc  main.cpp  main.qml  res.qrc
PIMS/Todos/qml/: Settings.qml  Tasks.qml
PIMS/Universe/: CMakeLists.txt  consts.h  cxnetwork.cpp  cxnetwork.h  cxurls.h  main.cpp  main.qml  res.qrc  universe.cpp  universe.h
PIMS/Universe/qml/: BoxTheme.js  Button.qml  LinkItem.qml  Mask.qml  Popup.qml  StatusBar.qml  TextField.qml
PIMS/Universe/ui/: FileBoxPage.qml  FragsPage.qml  HomePage.qml  LoginPage.qml  MessageItem.qml  NaviBar.qml  SettingsPage.qml  WriterPage.qml
PIMS/Writer/: CMakeLists.txt  cxapp.cpp  cxapp.h  cxapplication.cpp  cxapplication.h  cxsystemnotify.cpp  cxsystemnotify.h  listmodel.cpp  logo.rc  main.cpp  main.qml  qml.qrc  res.qrc
PIMS/Writer/CxFw/: Menu.qml  MenuSeparator.qml  ToolBar.qml
PIMS/Writer/js/: app.js
PIMS/Writer/qml/: AppConfigs.js  Banner.qml  Button.qml  ContentPage.qml  HomePage.qml  LinkItem.qml  Mask.qml  OneColumnTreeView.qml  Popup.qml  ToolBar.qml
UdpChat/: CMakeLists.txt  main.cpp  main.qml  udpchat.cpp  udpchat.h
VPL/: CMakeLists.txt  VCanvas.qml  curveitem.cpp  edgeitem.cpp  edgeitem.h  helper.h  main.cpp  main.qml  qml.qrc
app/ColorSheet/: CMakeLists.txt
app/CxVoxel/: CMakeLists.txt  cameracontroller.cpp  mainwindow.cpp  mainwindow.h
app/CxWriter/: CMakeLists.txt  cxbufferlistmodel.cpp  cxstatusbar.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/DragDrop/: main.qml
app/MarkdownEditor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  markdownsyntaxhighlighter.cpp
app/PassKeeper/: CMakeLists.txt  main.qml
app/ServicePanel/: main.cpp
app/TomatoClock/: main.qml  qml.qrc
app/pixel-editor/: CMakeLists.txt
app/writer/: CMakeLists.txt  cxapplication.cpp  cxapplication.h  cxquicksyntaxhighlighter.cpp  cxquicksyntaxhighlighter.h  main.cpp  main.qml  res.qrc  theme.h  wrier.pro  writer_zh_CN.ts
app/writer/MarkdownSyntaxHighlighter/: CMakeLists.txt
app/writer/QGlobalShortcut/: CMakeLists.txt  qglobalshortcut.cc
app/writer/js/: app.js
app/writer/qml/: StatusBar.qml  ToolBar.qml
cmake/: CxFw.cmake  CxfwInfo.cmake  CxfwInstall.cmake
cxfw/: CMakeLists.txt  tool.sh
cxfw/CxLogin/: CMakeLists.txt
cxfw/CxMarkdownHighlighter/: CMakeLists.txt  cxmarkdownhighlighter.cpp
cxfw/MarkdownHighlighter/: CMakeLists.txt  cxmarkdownhighlighter.h
cxfw/app/: CMakeLists.txt
cxfw/base/: CMakeLists.txt  cxargs.cpp  cxargs.h  cxarguments.h
cxfw/core/: CMakeLists.txt  cxcommand_line_option.cpp
cxfw/pixel-editor/: main.qml  pixel-editor_zh_CN.ts
cxfw/src/: CMakeLists.txt  cxfw_global.h.in
foot/: CMakeLists.txt  cxfw_version.hpp.in  main.cpp
foot/cmdline/: CMakeLists.txt  cmditem.hpp  cmdline.cpp  cmdline.hpp
funny-box/: CMakeLists.txt  main.cpp
funny-box/qrcode/: CMakeLists.txt  bqrcode.cpp  bqrcode.h
playground/PlayQuick/: CMakeLists.txt  main.qml
qrcode-editor/: CMakeLists.txt  main.cpp  main.qml  utils.cpp  utils.h
src/: cxfw.pro
src-0/lib/: lib.pro
src-0/utils/: app.pri  library.pri  plugin.pri  static_library.pri
src/CxControls/: CMakeLists.txt  qmldir
src/CxCore/: CMakeLists.txt  cxlistmodel.cpp  cxsettings.cpp  cxurls.cpp  cxurls.h
src/CxCore/cmake/: CxCoreConfig.cmake
src/CxFw/: CMakeLists.txt
src/CxFw/QGlobalShortcut/: CMakeLists.txt
src/CxNetwork/: CMakeLists.txt
src/CxQuick/: CMakeLists.txt  cxquick.cpp  cxquick.h  cxquickplugin.cpp  cxquickplugin.h  qmldir
src/CxQuick/qml/: LinkItem.qml  ListViewHighlighter.qml  OneColumnTreeView.qml
src/CxQuickPlugins/: CMakeLists.txt  qmldir
src/CxStyle/: CMakeLists.txt  cxstyle.cpp  cxstyle.h  cxstyleplugin.cpp  cxstyleplugin.h  qmldir
src/CxStyle/qml/: Button.qml  ComboBox.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuSeparator.qml  TextField.qml  ToolBar.qml  ToolSeparator.qml
src/UdpChat/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  udpchat.cpp
src/UdpChat/qml/: MsgItem.qml  SendMsgArea.qml  TextRect.qml
src/VPL/: CMakeLists.txt  CanvasContainer.qml  Edge.qml  Node.qml  Slot.qml  VCanvas.qml  curveitem.h  helper.cpp  main.cpp  main.qml  qml.qrc
src/app/MarkdownEditor/: CMakeLists.txt  markdownsyntaxhighlighter.h
writer/: .gitignore  CMakeLists.txt  listmodel.cpp  listmodel.h  logo.rc  main.cpp  main.qml  qml.qrc  writer_zh_CN.ts
(+454 files in other folders)
